# pazuzu

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
pazuzu/: grid.py  mesh.py  visualization.py
src/: galerkin.rs  lib.rs  mesh.rs  numerical_basics.rs
tests/: GFG.msh  load_grid.py  mesh_build.py  test_load_gmsh_file.py  untitled.geo  vertex_2D.msh
tests/data/: test_load_gmsh_adjacent_face_ids.npy  test_load_gmsh_cell_node_ids.npy  test_load_gmsh_coordinates.npy  test_load_gmsh_face_node_ids.npy
tests/data/system_tests/: test_load_gmsh_neighbor_ids.npy
tests/data/unit_tests/: test_alpha_optimized_nodes.json
workflows/: build_test.yml
